# prediction-market-settlement-skill

./: CLAUDE.md  LICENSE  README.md  install-custom.sh  install.sh
agents/: market-resolution-reviewer.md
commands/: audit-resolution.md
example/: .gitignore  Anchor.toml  package.json  tsconfig.json
example/programs/prediction-market/: Cargo.toml
example/programs/prediction-market/src/: lib.rs
example/tests/: prediction_market.ts
skill/: SKILL.md  anti-manipulation.md  dispute-windows.md  merkle-outcome-verification.md  pyth-fallback-resolution.md  resources.md  settlement-account-patterns.md
